--- a/calendario/calendario.html
+++ b/calendario/calendario.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario</title>
     <script src="calendario.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <!-- Autor: Ronald Garcia Guerrero -->
 </head>
 <body>
-    <h2 id='titulo'>Calendario</h2>
+    <h2 id='titulo'>Imprimir Calendario</h2>
+    <h4>Autor: Ronald García Guerrero</h4>
     
 </body>
 </html>
